fix work overview image size on mobile device

--- a/app/(user)/works/[work]/work.style.scss
+++ b/app/(user)/works/[work]/work.style.scss
@@ -158,6 +158,12 @@
       }
     }
 
+    @media screen and (max-width: 600px) {
+      .right img {
+        height: 60vw;
+      }
+    }
+
     @media screen and (max-width: 412px) {
       .single-overview {
         gap: 2em;
